--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.5.6",
     "grpc": "^1.24.6",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "normalize-url": ">=4.5.1"
   }
 }
